--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.10.3
   provider: ^6.1.5+1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
