--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   supabase_flutter: ^2.10.3
   provider: ^6.1.5+1
   google_sign_in: ^6.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
